--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+body, p {
+	font-family:"Tahoma", Georgia, Serif;
+	color: #ffffff;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-family: 'league_gothicregular', Arial, sans-serif;
+}
+
 @font-face {
     font-family: 'league_gothicregular';
     src: url('league_gothic-webfont.eot');
