udpating to use modernizr with font face

--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,14 @@ body, p {
 	color: #ffffff;
 }
 
-h1, h2, h3, h4, h5, h6 {
+.fontface h1, h2, h3, h4, h5, h6 {
 	font-family: 'league_gothicregular', Arial, sans-serif;
 }
+
+.no-fontface h1, h2, h3, h4, h5, h6 {
+	font-family: Arial, sans-serif;
+}
+
 
 @font-face {
     font-family: 'league_gothicregular';
