--- a/base.css
+++ b/base.css
@@ -53,7 +53,7 @@
 	body {
 		background: #000;
 		font: 14px/21px "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-		color: #ddd;
+		color: #222;
 		-webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
 		-webkit-text-size-adjust: 100%;
  }
@@ -97,21 +97,10 @@
 
 	hr { border: solid #ddd; border-width: 1px 0 0; clear: both; margin: 5px 0 10px; height: 0; }
 
-	@font-face {
-    font-family: 'league_gothicregular';
-    src: url('league_gothic-webfont.eot');
-    src: url('league_gothic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('league_gothic-webfont.woff') format('woff'),
-         url('league_gothic-webfont.ttf') format('truetype'),
-         url('league_gothic-webfont.svg#league_gothicregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
 /* #Links
 ================================================== */
-	a, a:visited { color: #3399FF; text-decoration: underline; outline: 0; }
-	a:hover, a:focus { color: #000; }
+	a, a:visited { color: #3399FF; outline: 0; text-decoration: none;  }
+	a:hover, a:focus { text-decoration: underline; }
 	p a, p a:visited { line-height: inherit; }
 
 
@@ -327,35 +316,3 @@ tbody tr:nth-child(even) {
 td {
 	vertical-align: middle;
 }
-
-
-/* #Sections
-================================================== */
-
-.page-header {
-	background-color: #E5E5E5;
-	color: #333;
-}
-
-.page-header h4{
-	padding-left: 10px;
-	background-color: #E5E5E5;
-	color: #333;
-}
-
-.custom-form {
-	background-color: #FFF;
-}
-
-.side-bar {
-	background-color: #404040;
-}
-
-.footer {
-
-}
-
-.edit-form-bar {
-	background-color: #eee;
-}
-
