--- a/layout.css
+++ b/layout.css
@@ -12,7 +12,8 @@
 	#Site Styles
 	#Page Styles
 	#Media Queries
-	#Font-Face */
+	#Font-Face 
+	#Sections */
 
 /* #Site Styles
 ================================================== */
@@ -44,21 +45,48 @@
 		#class_type, tr td:nth-child(4)			{ display:none; visibility:hidden; }
 	}
 
-
 /* #Font-Face
 ================================================== */
-/* 	This is the proper syntax for an @font-face file
-		Just create a "fonts" folder at the root,
-		copy your FontName into code below and remove
-		comment brackets */
+@font-face {
+    font-family: 'league_gothicregular';
+    src: url('league_gothic-webfont.eot');
+    src: url('league_gothic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('league_gothic-webfont.woff') format('woff'),
+         url('league_gothic-webfont.ttf') format('truetype'),
+         url('league_gothic-webfont.svg#league_gothicregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
 
-/*	@font-face {
-	    font-family: 'FontName';
-	    src: url('../fonts/FontName.eot');
-	    src: url('../fonts/FontName.eot?iefix') format('eot'),
-	         url('../fonts/FontName.woff') format('woff'),
-	         url('../fonts/FontName.ttf') format('truetype'),
-	         url('../fonts/FontName.svg#webfontZam02nTh') format('svg');
-	    font-weight: normal;
-	    font-style: normal; }
-*/
+/* #Sections
+================================================== */
+
+.page-header {
+	background-color: #E5E5E5;
+	color: #333;
+}
+
+.page-header h4{
+	padding-left: 10px;
+	background-color: #E5E5E5;
+	color: #333;
+}
+
+.custom-form {
+	background-color: #FFF;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+.side-bar {
+	background-color: #404040;
+}
+
+.edit-form-bar {
+	background-color: #eee;
+	padding-left: 10px;
+}
+
+.question {
+	border: 1px dashed #ccc;
+}
